--- a/metadata/md5-cache/games-misc/snake-0.3.2
+++ b/metadata/md5-cache/games-misc/snake-0.3.2
@@ -8,6 +8,6 @@ IUSE=+bell debug
 KEYWORDS=~amd64
 LICENSE=MIT Apache-2.0-with-LLVM-exceptions
 SLOT=0
-SRC_URI=https://github.com/PonasKovas/snake/archive/refs/tags/0.3.2.tar.gz https://crates.io/api/v1/crates/c2-chacha/0.2.2/download -> c2-chacha-0.2.2.crate https://crates.io/api/v1/crates/cfg-if/0.1.9/download -> cfg-if-0.1.9.crate https://crates.io/api/v1/crates/crossterm_input/0.3.9/download -> crossterm_input-0.3.9.crate https://crates.io/api/v1/crates/crossterm_screen/0.2.5/download -> crossterm_screen-0.2.5.crate https://crates.io/api/v1/crates/crossterm_utils/0.2.4/download -> crossterm_utils-0.2.4.crate https://crates.io/api/v1/crates/crossterm_winapi/0.1.5/download -> crossterm_winapi-0.1.5.crate https://crates.io/api/v1/crates/getrandom/0.1.10/download -> getrandom-0.1.10.crate https://crates.io/api/v1/crates/home/0.5.11/download -> home-0.5.11.crate https://crates.io/api/v1/crates/kernel32-sys/0.2.2/download -> kernel32-sys-0.2.2.crate https://crates.io/api/v1/crates/lazy_static/1.3.0/download -> lazy_static-1.3.0.crate https://crates.io/api/v1/crates/libc/0.2.62/download -> libc-0.2.62.crate https://crates.io/api/v1/crates/ppv-lite86/0.2.5/download -> ppv-lite86-0.2.5.crate https://crates.io/api/v1/crates/rand/0.7.0/download -> rand-0.7.0.crate https://crates.io/api/v1/crates/rand_chacha/0.2.1/download -> rand_chacha-0.2.1.crate https://crates.io/api/v1/crates/rand_core/0.5.0/download -> rand_core-0.5.0.crate https://crates.io/api/v1/crates/rand_hc/0.2.0/download -> rand_hc-0.2.0.crate https://crates.io/api/v1/crates/term_size/0.3.1/download -> term_size-0.3.1.crate https://crates.io/api/v1/crates/wasi/0.5.0/download -> wasi-0.5.0.crate https://crates.io/api/v1/crates/winapi-build/0.1.1/download -> winapi-build-0.1.1.crate https://crates.io/api/v1/crates/winapi-i686-pc-windows-gnu/0.4.0/download -> winapi-i686-pc-windows-gnu-0.4.0.crate https://crates.io/api/v1/crates/winapi-x86_64-pc-windows-gnu/0.4.0/download -> winapi-x86_64-pc-windows-gnu-0.4.0.crate https://crates.io/api/v1/crates/winapi/0.2.8/download -> winapi-0.2.8.crate https://crates.io/api/v1/crates/winapi/0.3.7/download -> winapi-0.3.7.crate https://crates.io/api/v1/crates/windows-sys/0.59.0/download -> windows-sys-0.59.0.crate https://crates.io/api/v1/crates/windows-targets/0.52.6/download -> windows-targets-0.52.6.crate https://crates.io/api/v1/crates/windows_aarch64_gnullvm/0.52.6/download -> windows_aarch64_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_aarch64_msvc/0.52.6/download -> windows_aarch64_msvc-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_gnu/0.52.6/download -> windows_i686_gnu-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_gnullvm/0.52.6/download -> windows_i686_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_msvc/0.52.6/download -> windows_i686_msvc-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_gnu/0.52.6/download -> windows_x86_64_gnu-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_gnullvm/0.52.6/download -> windows_x86_64_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_msvc/0.52.6/download -> windows_x86_64_msvc-0.52.6.crate
+SRC_URI=https://github.com/PonasKovas/snake/archive/refs/tags/0.3.2.tar.gz -> snake-0.3.2.tar.gz https://crates.io/api/v1/crates/c2-chacha/0.2.2/download -> c2-chacha-0.2.2.crate https://crates.io/api/v1/crates/cfg-if/0.1.9/download -> cfg-if-0.1.9.crate https://crates.io/api/v1/crates/crossterm_input/0.3.9/download -> crossterm_input-0.3.9.crate https://crates.io/api/v1/crates/crossterm_screen/0.2.5/download -> crossterm_screen-0.2.5.crate https://crates.io/api/v1/crates/crossterm_utils/0.2.4/download -> crossterm_utils-0.2.4.crate https://crates.io/api/v1/crates/crossterm_winapi/0.1.5/download -> crossterm_winapi-0.1.5.crate https://crates.io/api/v1/crates/getrandom/0.1.10/download -> getrandom-0.1.10.crate https://crates.io/api/v1/crates/home/0.5.11/download -> home-0.5.11.crate https://crates.io/api/v1/crates/kernel32-sys/0.2.2/download -> kernel32-sys-0.2.2.crate https://crates.io/api/v1/crates/lazy_static/1.3.0/download -> lazy_static-1.3.0.crate https://crates.io/api/v1/crates/libc/0.2.62/download -> libc-0.2.62.crate https://crates.io/api/v1/crates/ppv-lite86/0.2.5/download -> ppv-lite86-0.2.5.crate https://crates.io/api/v1/crates/rand/0.7.0/download -> rand-0.7.0.crate https://crates.io/api/v1/crates/rand_chacha/0.2.1/download -> rand_chacha-0.2.1.crate https://crates.io/api/v1/crates/rand_core/0.5.0/download -> rand_core-0.5.0.crate https://crates.io/api/v1/crates/rand_hc/0.2.0/download -> rand_hc-0.2.0.crate https://crates.io/api/v1/crates/term_size/0.3.1/download -> term_size-0.3.1.crate https://crates.io/api/v1/crates/wasi/0.5.0/download -> wasi-0.5.0.crate https://crates.io/api/v1/crates/winapi-build/0.1.1/download -> winapi-build-0.1.1.crate https://crates.io/api/v1/crates/winapi-i686-pc-windows-gnu/0.4.0/download -> winapi-i686-pc-windows-gnu-0.4.0.crate https://crates.io/api/v1/crates/winapi-x86_64-pc-windows-gnu/0.4.0/download -> winapi-x86_64-pc-windows-gnu-0.4.0.crate https://crates.io/api/v1/crates/winapi/0.2.8/download -> winapi-0.2.8.crate https://crates.io/api/v1/crates/winapi/0.3.7/download -> winapi-0.3.7.crate https://crates.io/api/v1/crates/windows-sys/0.59.0/download -> windows-sys-0.59.0.crate https://crates.io/api/v1/crates/windows-targets/0.52.6/download -> windows-targets-0.52.6.crate https://crates.io/api/v1/crates/windows_aarch64_gnullvm/0.52.6/download -> windows_aarch64_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_aarch64_msvc/0.52.6/download -> windows_aarch64_msvc-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_gnu/0.52.6/download -> windows_i686_gnu-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_gnullvm/0.52.6/download -> windows_i686_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_i686_msvc/0.52.6/download -> windows_i686_msvc-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_gnu/0.52.6/download -> windows_x86_64_gnu-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_gnullvm/0.52.6/download -> windows_x86_64_gnullvm-0.52.6.crate https://crates.io/api/v1/crates/windows_x86_64_msvc/0.52.6/download -> windows_x86_64_msvc-0.52.6.crate
 _eclasses_=toolchain-funcs	f9d71a6efe9d083aec750dd13968e169	flag-o-matic	e8de74bac929ba17427e740e95707d00	multiprocessing	1e32df7deee68372153dca65f4a7c21f	rust	e9d31591b9b0251018cd5c60a43bafa1	rust-toolchain	76468983281b0a7fc167ca224f84ecfd	cargo	a841e8aa4e7e39f3be436a349ef5d072
-_md5_=df9930424a0e9923889bf049834779c2
+_md5_=c15debe1e6e0c4c6911da85579951aa0
